BUG - overflowing width on Edge
BUG - overflowing width on Edge
BUG - overflow on Edge mobile
BUG - overflowing width on Edge mobile

--- a/css/elements/_masthead.scss
+++ b/css/elements/_masthead.scss
@@ -5,6 +5,7 @@ header#masthead {
 	left: 0;
 	right: 0;
 	z-index: 10000;
+	width: 100%;
 	transition: $ease-main $speed-fast;
 	transform: translateY(0);
 	-webkit-transform: translateY(0);
