--- a/style.css
+++ b/style.css
@@ -725,6 +725,7 @@ header#masthead {
   left: 0;
   right: 0;
   z-index: 10000;
+  width: 100%;
   transition: cubic-bezier(0.64, 0.22, 0.69, 0.98) 250ms;
   transform: translateY(0);
   -webkit-transform: translateY(0);
@@ -812,8 +813,7 @@ header#masthead {
 
 @media screen and (max-width: 767px) {
   button#return_to_top {
-    width: calc(100% - 2rem);
-    margin: 1rem; } }
+    display: none !important; } }
 
 @media screen and (min-width: 768px) {
   button#return_to_top {
